Display glass image on glass material page

--- a/materialsdisplaypageglass.html
+++ b/materialsdisplaypageglass.html
@@ -40,7 +40,9 @@
         <main>
             <div id="main_user_interaction">
                 <div class="materials-display-element" id="materials-display-top">
-                    <div class="materials-display-element" id="materials-display-image"></div>
+                    <div class="materials-display-element" id="materials-display-image">
+                        <img src="images/glass.jpg" alt="">
+                    </div>
                     <div id="materials-tech-info">
                         <div class="materials-display-element-top" id="materials-type">
                             <p class="title-field">Type:</p>
