add copper image

--- a/materialsdisplaypagemetals.html
+++ b/materialsdisplaypagemetals.html
@@ -60,7 +60,9 @@
                <div
                   class="materials-display-element"
                   id="materials-display-image"
-               ></div>
+               >
+                  <img src="images/copper.jpg" alt="Image of copper material" />
+               </div>
                <div id="materials-tech-info">
                   <div
                      class="materials-display-element-top"
