Template base created

--- a/template.html
+++ b/template.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
@@ -32,7 +33,7 @@
 
     <body>
         <!-- Navbar placeholder -->
-        <header id="header">
+        <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
@@ -40,9 +41,10 @@
         <div id="main-container"></div>
 
         <!-- Footer placeholder -->
-        <footer id="footer">
+        <footer id="footer-container">
             <nav id="footer-placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
     </body>
 </html>
