depot location skeleton complete

--- a/depot_display.html
+++ b/depot_display.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="./styles/depot_display.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,16 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <div id="main-container"></div>
+        <div id="main-container">
+            <div id="depot-name"></div>
+            <div id="depot-address"></div>
+            <div id="depot-location-section">
+                <div id="depot-image"></div>
+                <div id="depot-hours"></div>
+            </div>
+            <div id="depot-map"></div>
+            <div id="depot-recyclables-taken"></div>
+        </div>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
