--- a/profile.html
+++ b/profile.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/profile.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,15 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <div id="main-container"></div>
+        <div id="main-container">
+            <div id="profile-name"></div>
+            <div id="profile-address"></div>
+            <div class="profile-favourite-locations"></div>
+            <div class="profile-favourite-locations"></div>
+            <div class="profile-favourite-locations"></div>
+            <div class="profile-favourite-locations"></div>
+            <div class="profile-favourite-locations"></div>
+        </div>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
