--- a/depot_display.html
+++ b/depot_display.html
@@ -39,16 +39,18 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <div id="main-container">
-            <div id="depot-name"></div>
-            <div id="depot-address"></div>
-            <div id="depot-location-section">
-                <div id="depot-image"></div>
-                <div id="depot-hours"></div>
+        <main>
+            <div id="main-container">
+                <div id="depot-name"></div>
+                <div id="depot-address"></div>
+                <div id="depot-location-section">
+                    <div id="depot-image"></div>
+                    <div id="depot-hours"></div>
+                </div>
+                <div id="depot-map"></div>
+                <div id="depot-recyclables-taken"></div>
             </div>
-            <div id="depot-map"></div>
-            <div id="depot-recyclables-taken"></div>
-        </div>
+        </main>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
