--- a/depot_location.html
+++ b/depot_location.html
@@ -1,79 +1,85 @@
 <!DOCTYPE html>
+
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Malcolm Wanless" />
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/depot.css" />
-</head>
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="./styles/depot.css" />
 
-<body>
-    <header>
-        <nav id="navbar">
-            <div id="navbar-left">
-                <span class="material-symbols-outlined" id="compost-id">compost</span>
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <script src="./scripts/authentication.js"></script>
+    </head>
+
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar-container">
+            <nav id="navbar-placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
+
+        <main>
+            <div id="main_user_interaction">
+                <div id="image-preview">
+                    <img src="images/depot.png" alt="Depot Image" />
+                </div>
+                <div id="locations-dropdown">
+                    <select id="depot-locations-select">
+                        <option value="" disabled selected>Nearby</option>
+                        <option value="location1">Location 1</option>
+                        <option value="location2">Location 2</option>
+                        <option value="location3">Location 3</option>
+                        <option value="location3">Location 4</option>
+                    </select>
+                </div>
+
+                <!-- Favourites Dropdown -->
+                <div id="favourites-dropdown">
+                    <select id="favourites-select">
+                        <option value="" disabled selected>Favourite</option>
+                        <option value="favourite1">Favourite 1</option>
+                        <option value="favourite2">Favourite 2</option>
+                    </select>
+                </div>
+
+                <!-- Previous Dropdown -->
+                <div id="previous-dropdown">
+                    <select id="previous-select">
+                        <option value="" disabled selected>Previous</option>
+                        <option value="previous1">Previous 1</option>
+                        <option value="previous2">Previous 2</option>
+                        <option value="previous3">Previous 3</option>
+                    </select>
+                </div>
             </div>
-            <div id="navbar-right">
-                <span class="material-symbols-outlined" id="burger-menu">menu</span>
-            </div>
-        </nav>
-    </header>
+        </main>
 
-    <main>
-        <div id="main_user_interaction">
-            <div id="image-preview">
-                <img src="images/depot.png" alt="Depot Image" />
-            </div>
-            <div id="locations-dropdown">
-                <select id="depot-locations-select">
-                    <option value="" disabled selected>Nearby</option>
-                    <option value="location1">Location 1</option>
-                    <option value="location2">Location 2</option>
-                    <option value="location3">Location 3</option>
-                    <option value="location3">Location 4</option>
-                </select>
-            </div>
-
-            <!-- Favourites Dropdown -->
-            <div id="favourites-dropdown">
-                <select id="favourites-select">
-                    <option value="" disabled selected>Favourite</option>
-                    <option value="favourite1">Favourite 1</option>
-                    <option value="favourite2">Favourite 2</option>
-                </select>
-            </div>
-
-            <!-- Previous Dropdown -->
-            <div id="previous-dropdown">
-                <select id="previous-select">
-                    <option value="" disabled selected>Previous</option>
-                    <option value="previous1">Previous 1</option>
-                    <option value="previous2">Previous 2</option>
-                    <option value="previous3">Previous 3</option>
-                </select>
-            </div>
-        </div>
-    </main>
-
-    <footer id="footer">
-        <img src="images/icons8-home-48.png" alt="Home Icon" class="footer-logo" />
-        <img src="images/icons8-instagram-50.png" alt="Instagram Icon" class="footer-logo" />
-        <img src="images/icons8-facebook-48.png" alt="Facebook Icon" class="footer-logo" />
-        <img src="images/icons8-twitter-50.png" alt="Twitter Icon" class="footer-logo" />
-    </footer>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer-container">
+            <nav id="footer-placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+    </body>
 </html>
