--- a/home_page.html
+++ b/home_page.html
@@ -10,27 +10,34 @@
         <title>Trash to treasure</title>
 
         <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-        <meta name="Author" content="Malcolm Wanless" />
+        <meta name="Author" content="Team DTC-13" />
 
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="./styles/reset.css" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="./styles/homepagestyle.css" />
+
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <script src="./scripts/authentication.js"></script>
     </head>
 
     <body>
-        <!-- Malcolm start -->
-        <header>
-            <nav id="navbar">
-                <div id="navbar-left">
-                    <span class="material-symbols-outlined" id="compost-id">compost</span>
-                </div>
-                <div id="navbar-right">
-                    <span class="material-symbols-outlined" id="burger-menu">menu</span>
-                </div>
-            </nav>
+        <!-- Navbar placeholder -->
+        <header id="navbar-container">
+            <nav id="navbar-placeholder"></nav>
         </header>
+        <!-- Navbar placeholder -->
 
         <!-- Reuse above on new pages -->
 
@@ -45,22 +52,11 @@
 
         <!-- Reuse below on new pages -->
 
-        <footer id="footer">
-            <!-- Logo -->
-
-            <!-- <a href="./legal.html">Legal Stuff</a> -->
-            <!-- <a href="./privacy.html">Privacy Notice</a> -->
-            <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-
-            <!-- <div class="footer-icons">
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-         </div> -->
+        <!-- Footer placeholder -->
+        <footer id="footer-container">
+            <nav id="footer-placeholder"></nav>
         </footer>
-        <!-- Sebastian End -->
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
     </body>
 </html>
