--- a/login.html
+++ b/login.html
@@ -1,66 +1,54 @@
 <!DOCTYPE html>
 
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, follow" />
+        <title>Trash to treasure</title>
 
-    <title>Trash to treasure</title>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
 
-    <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-    <meta name="Author" content="Malcolm Wanless" />
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
 
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="styles/reset.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <script src="./scripts/authentication.js"></script>
+    </head>
 
-    <!-- Firebase related CSS, JS, and JQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-    <script src="./scripts/firebaseAPI_DTC13.js"></script>
-    <script src="./scripts/authentication.js"></script>
-</head>
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar-container">
+            <nav id="navbar-placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
 
-<body>
-    <!-- Malcolm start -->
-    <header>
-        <nav id="navbar">
-            <div id="navbar-left">
-                <span class="material-symbols-outlined" id="compost-id">compost</span>
-            </div>
-            <div id="navbar-right">
-                <span class="material-symbols-outlined" id="burger-menu"> menu </span>
-            </div>
-        </nav>
-    </header>
-    <!-- Malcolm end -->
-
-    <!-- Reuse above on new pages -->
-
-    <!-- Ephraim start -->
-    <main>
-        <div id="main_user_interaction">
-            <div class="main_logo">
-                <h4 class="main_teetotee">Trash to Treasure</h4>
-            </div>
-            <div class="main_text_boxes">
-                <div class="main_text_box1">
-                    <label for=".main_text_box_search">Search:</label>
-                    <input class="main_text_box_search" type="text" />
+        <main>
+            <div id="main_user_interaction">
+                <div class="main_logo">
+                    <h4 class="main_teetotee">Trash to Treasure</h4>
                 </div>
-                <!-- <div class="main_text_box2">
+                <div class="main_text_boxes">
+                    <div class="main_text_box1">
+                        <label for=".main_text_box_search">Search:</label>
+                        <input class="main_text_box_search" type="text" />
+                    </div>
+                    <!-- <div class="main_text_box2">
                         <label for=".main_text_box_username">Username:</label>
                         <input class="main_text_box_username" type="text" />
                     </div>
@@ -71,35 +59,16 @@
                     <div id="main_sign_in_button">
                         <button type="button">Sign In</button>
                     </div> -->
+                </div>
+                <div id="firebaseui-auth-container"></div>
             </div>
-            <div id="firebaseui-auth-container"></div>
-        </div>
-    </main>
-    <!-- Ephraim end -->
+        </main>
 
-    <!-- Sebastian start -->
-
-    <!-- Reuse below on new pages -->
-
-    <footer id="footer">
-        <!-- Logo -->
-
-        <div class="footer-content">
-            <span>Copyright© 2023</span>
-            <!-- <a href="./legal.html">Legal Stuff</a> -->
-            <!-- <a href="./privacy.html">Privacy Notice</a> -->
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-        </div>
-
-        <!-- <div class="footer-icons">
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-        </div> -->
-    </footer>
-    <!-- Sebastian End -->
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer-container">
+            <nav id="footer-placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+    </body>
 </html>
