--- a/materials_display_page.html
+++ b/materials_display_page.html
@@ -10,38 +10,40 @@
         <title>Trash to treasure</title>
 
         <meta name="Description" content="DTC team 13 mobile-first recycling app" />
-        <meta name="Author" content="Malcolm Wanless" />
+        <meta name="Author" content="Team DTC-13" />
 
+        <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="./styles/reset.css" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
         <link rel="stylesheet" href="./styles/materialsdisplaypage.css" />
-        <!-- firebase/firestore stuff -->
+
+        <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <script src="./scripts/authentication.js"></script>
     </head>
 
     <body>
-        <header>
-            <nav id="navbar">
-                <div id="navbar-left">
-                    <span class="material-symbols-outlined" id="compost-id">compost</span>
-                </div>
-                <div id="navbar-right">
-                    <span class="material-symbols-outlined" id="burger-menu">menu</span>
-                </div>
-            </nav>
+        <!-- Navbar placeholder -->
+        <header id="navbar-container">
+            <nav id="navbar-placeholder"></nav>
         </header>
+        <!-- Navbar placeholder -->
 
         <main>
             <div id="main_user_interaction">
                 <div class="materials-display-element" id="materials-display-top">
                     <div class="materials-display-element" id="materials-display-image">
-                        <img src="images/glass.jpg" alt="">
+                        <img src="images/glass.jpg" alt="" />
                     </div>
                     <div id="materials-tech-info">
                         <div class="materials-display-element-top" id="materials-type">
@@ -79,13 +81,12 @@
             </div>
         </main>
 
-        <footer id="footer">
-            <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
+        <!-- Footer placeholder -->
+        <footer id="footer-container">
+            <nav id="footer-placeholder"></nav>
         </footer>
-        <script src="scripts/firebaseAPI_DTC13.js"></script>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
         <script src="scripts/database_first_try.js"></script>
     </body>
 </html>
