--- a/search_first_draft.html
+++ b/search_first_draft.html
@@ -1,67 +1,68 @@
 <!DOCTYPE html>
+
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="robots" content="index, follow" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search Item Page First Draft</title>
-    <!-- CSS -->
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="stylesheet" href="./styles/reset.css" />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/template.css">
-</head>
+        <title>Trash to treasure</title>
 
-<body>
-    <header>
-        <nav id="navbar">
-            <div id="navbar-left">
-                <span class="material-symbols-outlined" id="compost-id">compost</span>
+        <meta name="Description" content="DTC team 13 mobile-first recycling app" />
+        <meta name="Author" content="Team DTC-13" />
+
+        <!-- CSS -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+        <link rel="stylesheet" href="styles/reset.css" />
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
+        <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="./styles/template.css" />
+
+        <!-- Firebase related CSS, JS, and JQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
+        <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script>
+        <script src="./scripts/authentication.js"></script>
+    </head>
+
+    <body>
+        <!-- Navbar placeholder -->
+        <header id="navbar-container">
+            <nav id="navbar-placeholder"></nav>
+        </header>
+        <!-- Navbar placeholder -->
+
+        <main>
+            <div id="search-recyclable-function">
+                <input type="text" id="user-recyclables-search" onkeyup="searchfunctionfirstdraft()" placeholder="Search for Recyclable Type..." />
+                <ul id="list-of-recyclables-types">
+                    <li><a href="#">a</a></li>
+                    <li><a href="#">b</a></li>
+                    <li><a href="#">c</a></li>
+                    <li><a href="#">d</a></li>
+                    <li><a href="#">e</a></li>
+                    <li><a href="#">e</a></li>
+                    <li><a href="#">f</a></li>
+                    <li><a href="#">g</a></li>
+                    <li><a href="#">h</a></li>
+                    <li><a href="#">i</a></li>
+                </ul>
             </div>
-            <div id="navbar-right">
-                <span class="material-symbols-outlined" id="burger-menu">menu</span>
-            </div>
-        </nav>
-    </header>
-    <!-- Reuse above on new pages -->
-    <main>
+        </main>
 
-        <div id="search-recyclable-function">
-            <input type="text" id="user-recyclables-search" onkeyup="searchfunctionfirstdraft()" placeholder="Search for Recyclable Type...">
-            <ul id="list-of-recyclables-types">
-                <li><a href="#">a</a></li>
-                <li><a href="#">b</a></li>
-                <li><a href="#">c</a></li>
-                <li><a href="#">d</a></li>
-                <li><a href="#">e</a></li>
-                <li><a href="#">e</a></li>
-                <li><a href="#">f</a></li>
-                <li><a href="#">g</a></li>
-                <li><a href="#">h</a></li>
-                <li><a href="#">i</a></li>
-            </ul>
-        </div>
-    
-    </main>
-    <!-- Reuse below on new pages -->
-    <footer id="footer">
-        <!-- Logo -->
-        <!-- <a href="./legal.html">Legal Stuff</a> -->
-        <!-- <a href="./privacy.html">Privacy Notice</a> -->
-        <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
-        <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-        <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-        <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-        <!-- <div class="footer-icons">
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
-        </div> -->
-    </footer>
-    <script src="./scripts/search-first-draft.js"></script>
-</body>
-
+        <!-- Footer placeholder -->
+        <footer id="footer-container">
+            <nav id="footer-placeholder"></nav>
+        </footer>
+        <!-- Footer placeholder -->
+        <script src="./scripts/skeleton.js"></script>
+        <script src="./scripts/search-first-draft.js"></script>
+    </body>
 </html>
