Debug home page navigation to next page

--- a/home_page.html
+++ b/home_page.html
@@ -43,7 +43,7 @@
 
         <main>
             <div id="main_user_interaction">
-                <a href="search_first_draft.html" class="home-screen-button" id="home-screen-button1">Search</a>
+                <a href="search_materials.html" class="home-screen-button" id="home-screen-button1">Search</a>
                 <a href="depot_location.html" class="home-screen-button" id="home-screen-button3">Depot Locations</a>
                 <a href="#" class="home-screen-button" id="home-screen-button4">Other Resources</a>
             </div>
