Add additional location and favorite options

--- a/depot_location.html
+++ b/depot_location.html
@@ -47,10 +47,16 @@
                 <div id="locations-dropdown">
                     <select id="depot-locations-select">
                         <option value="" disabled selected>Nearby</option>
-                        <option value="location1">Location 1</option>
-                        <option value="location2">Location 2</option>
-                        <option value="location3">Location 3</option>
-                        <option value="location3">Location 4</option>
+                        <option class="depot_locations"value="location1">Location 1</option>
+                        <option class="depot_locations" value="location2">Location 2</option>
+                        <option class="depot_locations" value="location3">Location 3</option>
+                        <option class="depot_locations" value="location3">Location 4</option>
+                        <option class="depot_locations" value="location3">Location 5</option>
+                        <option class="depot_locations" value="location3">Location 6</option>
+                        <option class="depot_locations" value="location3">Location 7</option>
+                        <option class="depot_locations" value="location3">Location 8</option>
+                        <option class="depot_locations" value="location3">Location 9</option>
+                        <option class="depot_locations" value="location3">Location 10</option>
                     </select>
                 </div>
 
@@ -59,6 +65,7 @@
                     <select id="favourites-select">
                         <option value="" disabled selected>Favourite</option>
                         <option value="favourite1">Favourite 1</option>
+                        <option value="favourite2">Favourite 2</option>
                         <option value="favourite2">Favourite 2</option>
                     </select>
                 </div>
