Create homepage with buttons

--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/homepage_using_buttons.css">
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +39,13 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <div id="main-container"></div>
+        <div id="main-container">
+            <div id="buttons">
+                <button>Search</button>
+                <button>Depot Locations</button>
+                <button>Other Resources</button>
+            </div>
+        </div>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
