--- a/homepage_using_links.html
+++ b/homepage_using_links.html
@@ -42,11 +42,11 @@
         <!-- Reuse above on new pages -->
 
         <main>
-            <!-- <div id="main_user_interaction">
+            <div id="main_user_interaction">
                 <a href="search_materials.html" class="home-screen-button" id="home-screen-button1">Search</a>
                 <a href="depot_location.html" class="home-screen-button" id="home-screen-button3">Depot Locations</a>
                 <a href="#" class="home-screen-button" id="home-screen-button4">Other Resources</a>
-            </div> -->
+            </div>
         </main>
 
         <!-- Reuse below on new pages -->
