--- a/search_materials.html
+++ b/search_materials.html
@@ -18,7 +18,6 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="./styles/template.css" />
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -39,23 +38,7 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <main>
-            <div id="search-recyclable-function">
-                <input type="text" id="user-recyclables-search" onkeyup="searchfunctionfirstdraft()" placeholder="Search for Recyclable Type..." />
-                <ul id="list-of-recyclables-types">
-                    <li><a href="#">a</a></li>
-                    <li><a href="#">b</a></li>
-                    <li><a href="#">c</a></li>
-                    <li><a href="#">d</a></li>
-                    <li><a href="#">e</a></li>
-                    <li><a href="#">e</a></li>
-                    <li><a href="#">f</a></li>
-                    <li><a href="#">g</a></li>
-                    <li><a href="#">h</a></li>
-                    <li><a href="#">i</a></li>
-                </ul>
-            </div>
-        </main>
+        <div id="main-container"></div>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
@@ -63,6 +46,5 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script src="./scripts/search-first-draft.js"></script>
     </body>
 </html>
