Create basic templates for search pages

--- a/search_material_categories.html
+++ b/search_material_categories.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
+        <link rel="stylesheet" href="styles/for_buttons.css">
+
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -38,7 +40,16 @@
         </header>
         <!-- Navbar placeholder -->
 
-        <div id="main-container"></div>
+        <div id="main-container">
+            <div id="buttons">
+                <a href=""><button>Garbage</button></a>
+                <a href=""><button>Glass</button></a>
+                <a href=""><button>Hazardous</button></a>
+                <a href=""><button>Metal</button></a>
+                <a href=""><button>Plastic</button></a>
+                <a href=""><button>Category 6</button></a>
+            </div>
+        </div>
 
         <!-- Footer placeholder -->
         <footer id="footer-container">
