--- a/search_material_subcategory.html
+++ b/search_material_subcategory.html
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="styles/reset.css" />
         <link rel="stylesheet" href="styles/header_and_footer_style.css" />
         <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="styles/homepage_using_buttons.css">
+        <link rel="stylesheet" href="styles/for_buttons.css">
+
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -41,9 +42,14 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href="search_material_categories.html"><button>Search</button></a>
-                <a href="depot_location.html"><button>Depot Locations</button></a>
-                <a href=""><button>Other Resources</button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
+                <a href=""><button></button></a>
             </div>
         </div>
 
@@ -53,6 +59,5 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script src="scripts/homepage_using_buttons.js"></script>
     </body>
 </html>
