Implement link functionality

--- a/search_material_categories.html
+++ b/search_material_categories.html
@@ -42,12 +42,12 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href=""><button>Garbage</button></a>
-                <a href=""><button>Glass</button></a>
-                <a href=""><button>Hazardous</button></a>
-                <a href=""><button>Metal</button></a>
-                <a href=""><button>Plastic</button></a>
-                <a href=""><button>Category 6</button></a>
+                <a href="search_material_subcategory.html"><button>Garbage</button></a>
+                <a href="search_material_subcategory.html"><button>Glass</button></a>
+                <a href="search_material_subcategory.html"><button>Hazardous</button></a>
+                <a href="search_material_subcategory.html"><button>Metal</button></a>
+                <a href="search_material_subcategory.html"><button>Plastic</button></a>
+                <a href="search_material_subcategory.html"><button>Category 6</button></a>
             </div>
         </div>
 
