Add functionality to homepage and search buttons

--- a/search_metal_subcategories.html
+++ b/search_metal_subcategories.html
@@ -42,12 +42,14 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href="search_garbage_subcategories.html"><button>Garbage</button></a>
-                <a href="search_glass_subcategories.html"><button>Glass</button></a>
-                <a href="search_hazardous_subcategories.html"><button>Hazardous</button></a>
-                <a href="search_metal_subcategories.html"><button>Metal</button></a>
-                <a href="search_plastic_subcategories.html"><button>Plastic</button></a>
-                <a href="search_material_subcategories.html"><button>Category 6</button></a>
+                <a href=""><button class="button0"></button></a>
+                <a href=""><button class="button1"></button></a>
+                <a href=""><button class="button2"></button></a>
+                <a href=""><button class="button3"></button></a>
+                <a href=""><button class="button4"></button></a>
+                <a href=""><button class="button5"></button></a>
+                <a href=""><button class="button6"></button></a>
+                <a href=""><button class="button7"></button></a>
             </div>
         </div>
 
@@ -57,5 +59,6 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
+        <script src="scripts/search_metal_subcategory.js"></script>
     </body>
 </html>
