--- a/search_hazardous_subcategories.html
+++ b/search_hazardous_subcategories.html
@@ -42,14 +42,14 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
-                <a href=""><button></button></a>
+                <a href=""><button class="button0"></button></a>
+                <a href=""><button class="button1"></button></a>
+                <a href=""><button class="button2"></button></a>
+                <a href=""><button class="button3"></button></a>
+                <a href=""><button class="button4"></button></a>
+                <a href=""><button class="button5"></button></a>
+                <a href=""><button class="button6"></button></a>
+                <a href=""><button class="button7"></button></a>
             </div>
         </div>
 
@@ -59,5 +59,6 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
+        <script src="scripts/search_hazardous_subcategory.js"></script>
     </body>
 </html>
