Use buttons instead of links for navigating pages

--- a/search_material_categories.html
+++ b/search_material_categories.html
@@ -42,12 +42,12 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href="search_garbage_subcategories.html"><button>Garbage</button></a>
-                <a href="search_glass_subcategories.html"><button>Glass</button></a>
-                <a href="search_hazardous_subcategories.html"><button>Hazardous</button></a>
-                <a href="search_metal_subcategories.html"><button>Metal</button></a>
-                <a href="search_plastic_subcategories.html"><button>Plastic</button></a>
-                <a href="search_material_subcategories.html"><button>Category 6</button></a>
+                <button class="category_1">Garbage</button>
+                <button class="category_2">Glass</button>
+                <button class="category_3">Hazardous</button>
+                <button class="category_4">Metal</button>
+                <button class="category_5">Plastic</button>
+                <button class="category_6">Category 6</button>
             </div>
         </div>
 
@@ -57,5 +57,6 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
+        <script src="scripts/search_material_categories.js"></script>
     </body>
 </html>
