Dynamically load data onto category buttons

--- a/search_material_subcategories.html
+++ b/search_material_subcategories.html
@@ -59,6 +59,6 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script id="dynamically_loaded_script_to_depending_on_user_selected_category"></script>
+        <script id="dynamically_load_a_script" src="scripts/dynamic_category_selection.js"></script>
     </body>
 </html>
