--- a/search_material_subcategories.html
+++ b/search_material_subcategories.html
@@ -42,14 +42,14 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href=""><button class="button0"></button></a>
-                <a href=""><button class="button1"></button></a>
-                <a href=""><button class="button2"></button></a>
-                <a href=""><button class="button3"></button></a>
-                <a href=""><button class="button4"></button></a>
-                <a href=""><button class="button5"></button></a>
-                <a href=""><button class="button6"></button></a>
-                <a href=""><button class="button7"></button></a>
+                <button class="button0"></button>
+                <button class="button1"></button>
+                <button class="button2"></button>
+                <button class="button3"></button>
+                <button class="button4"></button>
+                <button class="button5"></button>
+                <button class="button6"></button>
+                <button class="button7"></button>
             </div>
         </div>
 
