Store user choice and redirect user to new page

--- a/search_material_subcategories.html
+++ b/search_material_subcategories.html
@@ -60,5 +60,6 @@
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
         <script id="dynamically_load_a_script" src="scripts/dynamic_category_selection.js"></script>
+        <script src="scripts/search_material_subcategories.js"></script>
     </body>
 </html>
