FIrst draft of js code to show material info

--- a/display_material_information.html
+++ b/display_material_information.html
@@ -41,7 +41,7 @@
             <div id="main_user_interaction">
                 <div class="materials-display-element" id="materials-display-top">
                     <div class="materials-display-element" id="materials-display-image">
-                        <img src="images/glass.jpg" alt="">
+                        <img src="" alt="">
                     </div>
                     <div id="materials-tech-info">
                         <div class="materials-display-element-top" id="materials-type">
@@ -86,5 +86,6 @@
             <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
         </footer>
         <script src="scripts/firebaseAPI_DTC13.js"></script>
+        <script id="dynamically_load_a_script" src="scripts/load_materials.js"></script>
     </body>
 </html>
