--- a/search_material_subcategories.html
+++ b/search_material_subcategories.html
@@ -42,14 +42,14 @@
 
         <div id="main-container">
             <div id="buttons">
-                <button class="button0"></button>
-                <button class="button1"></button>
-                <button class="button2"></button>
-                <button class="button3"></button>
-                <button class="button4"></button>
-                <button class="button5"></button>
-                <button class="button6"></button>
-                <button class="button7"></button>
+                <button id="individual_buttons" class="button0"></button>
+                <button id="individual_buttons" class="button1"></button>
+                <button id="individual_buttons" class="button2"></button>
+                <button id="individual_buttons" class="button3"></button>
+                <button id="individual_buttons" class="button4"></button>
+                <button id="individual_buttons" class="button5"></button>
+                <button id="individual_buttons" class="button6"></button>
+                <button id="individual_buttons" class="button7"></button>
             </div>
         </div>
 
@@ -59,7 +59,7 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script id="dynamically_load_a_script" src="scripts/dynamic_category_selection.js"></script>
+        <script id="dynamically_load_a_script" src="scripts/load_subcategories.js"></script>
         <script src="scripts/search_material_subcategories.js"></script>
     </body>
 </html>
