--- a/display_material_information.html
+++ b/display_material_information.html
@@ -80,10 +80,7 @@
         </main>
 
         <footer id="footer">
-            <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-instagram-50.png" alt="" class="footer-logo" />
-            <img src="images/icons8-facebook-48.png" alt="" class="footer-logo" />
-            <img src="images/icons8-twitter-50.png" alt="" class="footer-logo" />
+            <nav id="footer-placeholder"></nav>
         </footer>
         <script src="scripts/firebaseAPI_DTC13.js"></script>
         <script id="dynamically_load_a_script" src="scripts/load_materials.js"></script>
