Remove unused script

--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -41,7 +41,7 @@
 
         <div id="main-container">
             <div id="buttons">
-                <a href="search_material_categories.html"><button>Search</button></a>
+                <a href="material_categories.html"><button>Search</button></a>
                 <a href="depot_location.html"><button>Depot Locations</button></a>
                 <a href=""><button>Other Resources</button></a>
             </div>
@@ -53,6 +53,5 @@
         </footer>
         <!-- Footer placeholder -->
         <script src="./scripts/skeleton.js"></script>
-        <script src="scripts/homepage_using_buttons.js"></script>
     </body>
 </html>
