--- a/depot_display.html
+++ b/depot_display.html
@@ -15,10 +15,10 @@
         <!-- CSS -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400;500;600;700&display=swap" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <link rel="stylesheet" href="styles/reset.css" />
-        <link rel="stylesheet" href="styles/header_and_footer_style.css" />
-        <link rel="stylesheet" href="styles/style.css" />
-        <link rel="stylesheet" href="./styles/depot_display.css" />
+        <link rel="stylesheet" href="styles/reset.css" /> <!-- Resetting default browser styles -->
+        <link rel="stylesheet" href="styles/header_and_footer_style.css" /> <!-- Styles for header and footer -->
+        <link rel="stylesheet" href="styles/style.css" /> <!-- Main stylesheet -->
+        <link rel="stylesheet" href="./styles/depot_display.css" /> <!-- Stylesheet for depot display -->
 
         <!-- Firebase related CSS, JS, and JQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -28,19 +28,21 @@
         <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
         <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
         <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
-        <script src="./scripts/firebaseAPI_DTC13.js"></script>
-        <script src="./scripts/authentication.js"></script>
+        <script src="./scripts/firebaseAPI_DTC13.js"></script> <!-- Firebase initialization script -->
+        <script src="./scripts/authentication.js"></script> <!-- Script for user authentication -->
     </head>
 
     <body>
-        <!-- Navbar placeholder -->
+        <!-- Header section with navigation bar -->
         <header id="navbar-container">
             <nav id="navbar-placeholder"></nav>
         </header>
         <!-- Navbar placeholder -->
 
+        <!-- Main content section -->
         <main>
             <div id="main-container">
+                <!-- Elements for displaying depot information -->
                 <div id="depot-name"></div>
                 <div id="depot-address"></div>
                 <div id="depot-location-section">
@@ -57,6 +59,8 @@
             <nav id="footer-placeholder"></nav>
         </footer>
         <!-- Footer placeholder -->
+
+        <!-- Additional script for page functionality -->
         <script src="./scripts/skeleton.js"></script>
     </body>
 </html>
