Add profile page and button to app's homepage

--- a/homepage_using_buttons.html
+++ b/homepage_using_buttons.html
@@ -47,6 +47,7 @@
                 <a href="material_categories.html"><button>Search</button></a>
                 <a href="depot_location.html"><button>Depot Locations</button></a>
                 <a href=""><button>Other Resources</button></a>
+                <button class="profile_button">Profile</button>
             </div>
         </div>
 
@@ -58,5 +59,6 @@
         
         <!-- Additional JavaScript file for general page functionality -->
         <script src="./scripts/skeleton.js"></script>
+        <script src="/scripts/homepage_using_buttons.js"></script>
     </body>
 </html>
