--- a/text/footer.html
+++ b/text/footer.html
@@ -1,3 +1,3 @@
 <div id="footer">
-    <img src="images/icons8-home-48.png" alt="" class="footer-logo" />
+    <img src="" alt="" class="footer-logo" />
 </div>
